--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F4CE6A"
+    android:background="#23B6A9"
     tools:context=".SplashActivity">
 
     <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/imageView"
+        android:id="@+id/animation_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -18,10 +18,11 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.316"
 
-        app:lottie_rawRes="@raw/animation"
-        app:lottie_loop="true"
+
+
         app:lottie_autoPlay="true"
-         />
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/education" />
 
     <TextView
         android:id="@+id/textView"
